# local-mcp

./: .gitignore  README.md  pyproject.toml  scratch_vec_test.py  test_enrich.py  test_retrieval_hybrid.py
docs/: Brief.md  MILESTONE_2.md  PRD.md  TECH_DESIGN.md  USER_GUIDE.md
docs/.obsidian/: workspace.json
src/docctx/: __init__.py  cli.py  config.py  exceptions.py  mcp_server.py  paths.py
src/docctx/db/: __init__.py  connection.py  queries.py  schema.sql
src/docctx/eval/: __init__.py  harness.py  runner.py
src/docctx/ingestion/: __init__.py  adapters.py  chunker.py  discovery.py  enricher.py  extractor.py  fetcher.py  indexer.py  pipeline.py  scope.py
src/docctx/mcp/: __init__.py  tools.py
src/docctx/models/: __init__.py
src/docctx/observability/: __init__.py  doctor.py  inspect.py
src/docctx/retrieval/: __init__.py  cache.py  explain.py  ranking.py  search.py  service.py  threshold.py  tokenizer.py
tests/: test_eval_dataset.json
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_scope.py  test_tokenizer.py
