[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docctx"
version = "0.1.0"
description = "Local-first deterministic context retrieval engine for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "docctx" }]
keywords = ["mcp", "documentation", "retrieval", "coding-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "selectolax>=0.3.21",
    "mcp>=1.0.0",
    "platformdirs>=4.2.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=5.5.1",
    "google-genai>=2.8.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
docctx = "docctx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"
